Add biological locmotion image

--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -163,6 +163,8 @@
         \end{column}%
     \end{columns}
 
+\TODO{agregar una imagen por cada tipo de robot asi se hacen uan mejor idea}
+
 \end{frame}
 
 \begin{frame}
@@ -227,9 +229,9 @@
 
 \begin{frame}
     \frametitle{Impacto de la robótica}
-    
+
     Filosofemos...
     Revolución industrial.
-    
+
     \note{Filosofía de la robótica}
 \end{frame}
