--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -1,28 +1,27 @@
 
 \begin{frame}
     \frametitle{Locomoción}
+    \small
     El humano copia a la naturaleza para construir tipos de locomoción.
-    Mostrar ejemplos del libro Figura 2.1. animales y robots reales.
-    
-    \begin{itemize}
-        \item Caminar
-        \item Correr
-        \item
-    \end{itemize}
-    
+    \TODO{Mostrar ejemplos del libro Figura 2.1. animales y robots reales.}
+
+    \begin{center}
+        \includegraphics[width=0.7\columnwidth]{images/biological_locomotion_systems.pdf}
+    \end{center}
+
     La naturaleza tuvo que adaptar a los animales para terrenos irregulares!
-    Los insectos por ejemplo tienen que sortear cambios de altura que superan en ordenes de magnistud su tamaño.
-    
-    Utilizamos ruedas por que son muy eficintes en terrenos planos y duros.
-    
+
+    \note{Los insectos por ejemplo tienen que sortear cambios de altura que superan en ordenes de magnitud su tamaño.}
+
+    Utilizamos ruedas por que son muy eficientes en terrenos planos y firmes.
 \end{frame}
 
 
 \begin{frame}
     \frametitle{Locomoción}
-    
+
     Manipulación: un brazo robótica está fijo y mueve objetos en su espacio de trabajo aplicando fuerza sobre ellos.
-    
+
     Locomoción: el entorno está fijo y el robot se mueve impartiendo fuerza sobre el entorno.
     \begin{itemize}
         \item Estabilidad
@@ -49,16 +48,16 @@
 \begin{frame}
     \frametitle{Locomoción}
     Ventajas y desventajas de robots con patas:
-    
+
     Ventajas: permite ir por terrenos irregulares, reducen el impacto ambiental dado que tienen menos puntos de contacto.
     Desventaja: complegidad mecánica, mayor consumo (una pata con muchos joints puede tener que bancar todo el paso del robot), para que tenga mucha maniobrabilidad cada las patas deben tener muchas juntas.
-    
+
 \end{frame}
 
 
 \begin{frame}
     \frametitle{Gaits}
-    
+
 \end{frame}
 
 
@@ -69,5 +68,5 @@
 
 \begin{frame}
     \frametitle{Drones?}
-    
+
 \end{frame}
