--- a/teoricas/teorica_03/slides.tex
+++ b/teoricas/teorica_03/slides.tex
@@ -50,7 +50,7 @@
 % add math preamble
 %\input{./math_preamble}
 
-\title{Sensores y actuadores}
+\title{Sensores}
 \author{}
 \institute{Universidad Nacional de Rosario}
 %\date{\scriptsize{Julio 1, 2021}}
@@ -60,12 +60,6 @@
 
 % add title page
 \frame{\titlepage}
-
-\section{Tipos de locomoción}
-\input{src/locomotion.tex}
-
-\section{Kinematica}
-\input{src/kinematics.tex}
 
 \section{Sensores}
 \input{src/sensors.tex}
