Improve locomotion slides

--- a/teoricas/teorica_02/slides.tex
+++ b/teoricas/teorica_02/slides.tex
@@ -50,7 +50,7 @@
 % add math preamble
 %\input{./math_preamble}
 
-\title{Sensores y actuadores}
+\title{Locomoción}
 \author{}
 \institute{Universidad Nacional de Rosario}
 %\date{\scriptsize{Julio 1, 2021}}
