--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -2,6 +2,11 @@
 \begin{frame}
     \frametitle{Locomoción}
     \small
+
+    \begin{block}{Locomoción}
+        Traslación de un lugar a otro.
+    \end{block}
+
     El humano copia a la naturaleza para construir tipos de locomoción.
     \TODO{Mostrar ejemplos del libro Figura 2.1. animales y robots reales.}
 
@@ -14,6 +19,24 @@
     \note{Los insectos por ejemplo tienen que sortear cambios de altura que superan en ordenes de magnitud su tamaño.}
 
     Utilizamos ruedas por que son muy eficientes en terrenos planos y firmes.
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Cinemática y Dinámica}
+    \begin{block}{Cinemática}
+        La cinemática es la rama de la mecánica que describe el movimiento de los objetos sólidos sin considerar las causas que lo originan (las fuerzas) y se limita, principalmente, al estudio de la trayectoria en función del tiempo. Para ello utiliza velocidades y aceleraciones, que describen cómo cambia la posición en función del tiempo.
+    \end{block}
+    \note{La velocidad se determina como el cociente entre el desplazamiento y el tiempo utilizado, mientras que la aceleración es el cociente entre el cambio de velocidad y el tiempo utilizado.}
+
+    \begin{block}{Dinámica}
+        La dinámica es la parte de la física que estudia la relación existente entre las fuerzas que actúan sobre un cuerpo y los efectos que se producirán sobre el movimiento de ese cuerpo.
+    \end{block}
+
+    \note{Los antiguos pensadores griegos creían que la velocidad y la constancia del movimiento en la línea recta de un cuerpo (fenómeno descripto años más tarde como movimiento rectilíneo uniforme o MRU) estaban proporcionalmente relacionadas con una fuerza constante. Por extensión, se creía que la caída de un cuerpo pertenecía a esa categoría, por lo que se suponía que caería más rápido el cuerpo que más pesara.
+    \\
+    Luego, Galileo Galilei entendió que la caída de los cuerpos no podía ser un movimiento uniforme, y que desde una misma altura, dos cuerpos de distinto peso tardan lo mismo en caer. Este contexto fue lo que posibilitó que algunos años después, Isaac Newton estableciera las tres leyes fundamentales de la dinámica, que explicaban las pautas fundamentales del comportamiento de los cuerpos.}
+
 \end{frame}
 
 
@@ -46,11 +69,18 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Locomoción}
-    Ventajas y desventajas de robots con patas:
-
-    Ventajas: permite ir por terrenos irregulares, reducen el impacto ambiental dado que tienen menos puntos de contacto.
-    Desventaja: complegidad mecánica, mayor consumo (una pata con muchos joints puede tener que bancar todo el paso del robot), para que tenga mucha maniobrabilidad cada las patas deben tener muchas juntas.
+    \frametitle{Locomoción: Robots con patas}
+    {\bf Ventajas}:
+    \begin{itemize}
+        \item Permiten ir por terrenos irregulares
+        \item Reducen el impacto ambiental dado que tienen menos puntos de contacto
+    \end{itemize}
+    {\bf Desventaja: }
+    \begin{itemize}
+        \item Complegidad mecánica
+        \item mayor consumo (una pata con muchos joints puede tener que soportar todo el peso del robot)
+        \item para que tenga mucha maniobrabilidad cada pata debe tener muchas juntas.
+\end{itemize}
 
 \end{frame}
 
