Add hexapod image

--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -70,6 +70,11 @@
 
 \begin{frame}
     \frametitle{Locomoción: Robots con patas}
+
+    \begin{center}
+        \includegraphics[width=0.4\columnwidth]{images/hexapod_phantomX_mark_II.jpg}
+    \end{center}
+    \footnotesize
     {\bf Ventajas}:
     \begin{itemize}
         \item Permiten ir por terrenos irregulares
