Rename robot locomotion images

--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -140,25 +140,29 @@
 
     \begin{figure}[!h]
         \centering
-        \subfloat[Fija]
+        \subfloat[Diff-drive]
         {
-            \includegraphics[width=0.15\columnwidth]{./images/fix_wheel.png}
+            \includegraphics[height=0.3\textheight]{./images/differential_drive_robot.png}
         }
-        \subfloat[Direccional]
+        \subfloat[Skid-steer]
         {
-            \includegraphics[width=0.15\columnwidth]{./images/directional_wheel.png}
+            \includegraphics[height=0.3\textheight]{./images/skid_steer_robot.png}
         }
-        \subfloat[Giratoria]
+        \subfloat[Triciclo]
         {
-            \includegraphics[width=0.15\columnwidth]{./images/rotational_wheel.png}
+            \includegraphics[height=0.3\textheight]{./images/tricycle_robot.png}
         }
-        \subfloat[Omnidireccional]
+        \subfloat[Car-like]
         {
-            \includegraphics[width=0.2\columnwidth]{./images/omni_wheel.png}
+            \includegraphics[height=0.3\textheight]{./images/carlike_robot.png}
+        }\\
+        \subfloat[Omni-wheel]
+        {
+            \includegraphics[height=0.3\textheight]{./images/omni_robot.png}
         }
         \subfloat[Mecanum]
         {
-            \includegraphics[width=0.2\columnwidth]{./images/mecanum_wheel.png}
+            \includegraphics[height=0.3\textheight]{./images/mecanum_robot.png}
         }
     \end{figure}
 \end{frame}
