Add right-hand rule images

--- a/teoricas/teorica_02/slides.tex
+++ b/teoricas/teorica_02/slides.tex
@@ -64,7 +64,7 @@
 \section{Tipos de locomoción}
 \input{src/locomotion.tex}
 
-\section{Kinematica}
+\section{Cinemática de un robot móvil}
 \input{src/kinematics.tex}
 
 \end{document}
