--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -165,8 +165,8 @@
             \includegraphics[height=0.3\textheight]{./images/mecanum_robot.png}
         }
     \end{figure}
+    \TODO{se puede agregar las descripciones de ismael para dejar las slides completas.}
 \end{frame}
-
 
 \begin{frame}
     \frametitle{Drones?}
