--- a/teoricas/teorica_02/src/kinematics.tex
+++ b/teoricas/teorica_02/src/kinematics.tex
@@ -1,8 +1,13 @@
 \begin{frame}
-    \frametitle{Sistema de referencia Local y Global}
-    Poner imagen 3.1 del libro
+    \frametitle{Representación d Posición del Robot 2D}
+
 \end{frame}
 
+
+\begin{frame}
+    \frametitle{Right-hand rule}
+
+\end{frame}
 
 \begin{frame}
     \frametitle{Sistema de referencia Local y Global}
