--- a/teoricas/teorica_02/src/kinematics.tex
+++ b/teoricas/teorica_02/src/kinematics.tex
@@ -160,13 +160,13 @@ Ejemplo un vector de rotación con una magnitud de $\dfrac{\pi}{2}$ apuntando en
 \begin{frame}
     \frametitle{Quaternions}
     Los cuaterniones es una generalización de números complejos con tres números imaginarios (i, j y k). Es un número complejo de cuatro dimensiones que se puede utilizar para representar la orientación de un cuerpo rígido o un marco de coordenadas en un espacio tridimensional. La definición general de un cuaternión viene dada por:
-
+    %
     \begin{equation*}
         q = w + q_x i + q_y j + q_z k = \begin{bmatrix} q_w & q_x & q_y & q_z\end{bmatrix}
     \end{equation*}
 
     Los cuaterniones representan una transformación de rotación en 3D. Por lo tanto, la forma más fácil de representar un cuaternión es imaginar la rotación de un ángulo dado alrededor de un vector dado. La siguiente figura ilustra la rotación del ángulo $\theta$ alrededor del vector $\vec{v} = [v_{x} v_{y} v_{z}]$. El cuaternión asociado a esta rotación está dado por:
-
+    %
     \begin{align*}
         q &= \begin{bmatrix} q_w & q_x & q_y & q_z\end{bmatrix}\\
         q &= \begin{bmatrix}
@@ -234,4 +234,6 @@ Ejemplo un vector de rotación con una magnitud de $\dfrac{\pi}{2}$ apuntando en
     \end{center}
 \end{frame}
 
-
+\begin{frame}
+    \TODO{Crear una práctica donde los chicos jueguen con traslaciones, rotaciones transformaciones. Quaterniones.}
+\end{frame}
