--- a/teoricas/teorica_02/src/kinematics.tex
+++ b/teoricas/teorica_02/src/kinematics.tex
@@ -242,5 +242,13 @@ Ejemplo un vector de rotación con una magnitud de $\dfrac{\pi}{2}$ apuntando en
 \end{frame}
 
 \begin{frame}
+    \frametitle{Cinemática de un robot diferencial}
+    \TODO{Agregar cuentas para la cinemática de un robot diferencial.}
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Práctica}
     \TODO{Crear una práctica donde los chicos jueguen con traslaciones, rotaciones transformaciones. Quaterniones.}
+    \TODO{Presentar el modelo car-like}
 \end{frame}
