--- a/teoricas/teorica_02/slides.tex
+++ b/teoricas/teorica_02/slides.tex
@@ -64,6 +64,9 @@
 \section{Tipos de locomoción}
 \input{src/locomotion.tex}
 
+\section{Representación de posición y orientación}
+\input{src/pose.tex}
+
 \section{Cinemática de un robot móvil}
 \input{src/kinematics.tex}
 
