--- a/teoricas/teorica_02/src/math_preamble.tex
+++ b/teoricas/teorica_02/src/math_preamble.tex
@@ -1,6 +1,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsopn}
+\usepackage{mathtools}
 
 % math
 \renewcommand{\vec}[1]{\boldsymbol{\mathbf{#1}}}
@@ -16,19 +17,23 @@
 
 % Declare projection as math function
 \DeclareMathOperator{\proj}{proj}
+\newcommand{\fromCoord}[2]{{#1}_\mathrm{#2}}
+\newcommand{\toCoord}[2]{\prescript{\mathrm{#2}}{}{#1}}
 \newcommand{\worldCoordSystem}{\mathrm{w}}
 \newcommand{\cameraCoordSystem}{\mathrm{c}}
 \newcommand{\point}{\vec{p}}
-\newcommand{\worldPoint}{\point^{\mathrm{w}}}
-\newcommand{\homoWorldPoint}{\homo{\point}^{\mathrm{w}}}
-\newcommand{\cameraPoint}{\point^{\mathrm{c}}}
-\newcommand{\homoCameraPoint}{\homo{\point}^{\mathrm{c}}}
+\newcommand{\worldPoint}{\toCoord{\point}{\worldCoordSystem}}
+\newcommand{\homoWorldPoint}{\toCoord{\homo{\point}}{\worldCoordSystem}}
+\newcommand{\cameraPoint}{\toCoord{\point}{\cameraCoordSystem}}
+\newcommand{\homoCameraPoint}{\toCoord{\homo{\point}}{\cameraCoordSystem}}
 \newcommand{\measurement}{\vec{z}}
 \newcommand{\prediction}{\hat{\vec{z}}}
 \newcommand{\imagePoint}{\vec{u}}
 \newcommand{\seMatrix}{\vec{\xi}}
-\newcommand{\transform}[2]{{}^\mathrm{#1}\seMatrix_\mathrm{#2}}
+\newcommand{\transform}[2]{\toCoord{\fromCoord{\seMatrix}{#2}}{#1}}
+\newcommand{\pointCoord}[1]{\toCoord{\point}{#1}}
 \newcommand{\rotation}{\vec{R}}
+\newcommand{\rotationCoord}[2]{\toCoord{\fromCoord{\rotation}{#2}}{#1}}
 \newcommand{\translation}{\vec{t}}
 \newcommand{\intrinsicMatrix}{\vec{K}}
 \newcommand{\principalPoint}{\vec{c}}
