Add transformations properties

--- a/teoricas/teorica_02/src/kinematics.tex
+++ b/teoricas/teorica_02/src/kinematics.tex
@@ -1,6 +1,7 @@
 \begin{frame}
     \frametitle{Cinemática de un robot diferencial}
     \TODO{Agregar cuentas para la cinemática de un robot diferencial.}
+    \TODO{seguir slides de bs as. y armar unas slides nuevas?}
 \end{frame}
 
 
