--- a/teoricas/teorica_02/src/math_preamble.tex
+++ b/teoricas/teorica_02/src/math_preamble.tex
@@ -35,6 +35,7 @@
 \newcommand{\rotation}{\vec{R}}
 \newcommand{\rotationCoord}[2]{\toCoord{\fromCoord{\rotation}{#2}}{#1}}
 \newcommand{\translation}{\vec{t}}
+\newcommand{\translationCoord}[2]{\toCoord{\fromCoord{\translation}{#2}}{#1}}
 \newcommand{\intrinsicMatrix}{\vec{K}}
 \newcommand{\principalPoint}{\vec{c}}
 \newcommand{\reprojectionError}{u}
