Add peter corke as bibliography

--- a/teoricas/teorica_01/src/bibliography.bib
+++ b/teoricas/teorica_01/src/bibliography.bib
@@ -217,3 +217,16 @@
     publisher = {MIT Press},
 }
 
+% Robotics, Vision and Control: Fundamental Algorithms In MATLAB® Second, Completely Revised, Extended And Updated Edition
+@book{corke2017robotics,
+    author={Corke, Peter},
+    title={Robotics, Vision and Control: Fundamental Algorithms In MATLAB\textregistered Second, Completely Revised, Extended And Updated Edition},
+    year={2017},
+    publisher={Springer International Publishing},
+    address={Cham},
+    pages={1--693},
+    isbn={978-3-319-54413-7},
+    %doi={10.1007/978-3-319-54413-7},
+    %url={https://doi.org/10.1007/978-3-319-54413-7}
+}
+
