--- a/teoricas/teorica_01/src/bibliography.tex
+++ b/teoricas/teorica_01/src/bibliography.tex
@@ -1,12 +1,13 @@
 \section{Bibliografía}
 \begin{frame}
     \frametitle{Bibliografía}
-    
+
     \nocite{thrun2005probabilistic}
     \nocite{siegwart2011introduction}
     \nocite{siciliano2016handbook}
     \nocite{choset2005principles}
+    \nocite{corke2017robotics}
 
     \printbibliography
- 
+
 \end{frame}
