--- a/teoricas/teorica_02/slides.tex
+++ b/teoricas/teorica_02/slides.tex
@@ -72,4 +72,7 @@
 \section{Representación de posición y orientación}
 \input{src/pose.tex}
 
+\section{Bibliografía}
+\input{src/bibliography.tex}
+
 \end{document}
