--- a/teoricas/teorica_03/slides.tex
+++ b/teoricas/teorica_03/slides.tex
@@ -64,4 +64,22 @@
 \section{Sensores}
 \input{src/sensors.tex}
 
+\input{src/bumper.tex}
+
+\input{src/compass.tex}
+
+\input{src/imu.tex}
+
+\input{src/camera.tex}
+
+\input{src/laser.tex}
+
+\input{src/sonar.tex}
+
+\input{src/bumper.tex}
+
+\input{src/gnss.tex}
+
+\input{src/gps_rtk.tex}
+
 \end{document}
