Add sensors files

--- a/teoricas/teorica_03/slides.tex
+++ b/teoricas/teorica_03/slides.tex
@@ -64,6 +64,8 @@
 \section{Sensores}
 \input{src/sensors.tex}
 
+\input{src/encoders.tex}
+
 \input{src/bumper.tex}
 
 \input{src/compass.tex}
@@ -76,10 +78,10 @@
 
 \input{src/sonar.tex}
 
-\input{src/bumper.tex}
-
 \input{src/gnss.tex}
 
 \input{src/gps_rtk.tex}
+
+\input{src/event_camera.tex}
 
 \end{document}
