Add encoders slides

--- a/teoricas/teorica_01/slides.tex
+++ b/teoricas/teorica_01/slides.tex
@@ -67,6 +67,9 @@
 \section{Introducción}
 \input{src/mobile_robotics_introduction.tex}
 
+\section{Herramientas de trabajo}
+\input{src/tools.tex}
+
 \section{Bibliografía}
 \input{src/bibliography.tex}
 
