Add compass images

--- a/teoricas/teorica_03/src/compass.tex
+++ b/teoricas/teorica_03/src/compass.tex
@@ -1,4 +1,31 @@
 \begin{frame}
     \frametitle{Compass}
-    \includegraphics[width=0.5\columnwidth]{pioneer_10.jpg}
+
+        \includegraphics[width=0.4\columnwidth]{images/earth_magnetic_field.pdf}
+        \includegraphics[width=0.4\columnwidth]{electromagnetism.jpg}
+
+    \begin{block}{Principio de funcionamiento}
+
+    \end{block}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Compass}
+
+    \begin{center}
+        \includegraphics[width=0.5\columnwidth]{images/magnetic_field.pdf}
+    \end{center}
+
+    \begin{itemize}
+        \item exteroceptivo
+        \item
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Compass}
+
+    \begin{center}
+        \includegraphics[width=0.5\columnwidth]{pioneer_10.jpg}
+    \end{center}
 \end{frame}
