Add magnetic field images

--- a/teoricas/teorica_03/src/compass.tex
+++ b/teoricas/teorica_03/src/compass.tex
@@ -10,6 +10,27 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{Compass}   
+    \begin{figure}[!h]
+        \centering
+        \subfloat[Magnetic field intensity]
+        {
+            \includegraphics[width=0.5\columnwidth]{images/magnetic_field_intensity.pdf}
+        }
+        \subfloat[Magnetic declination]
+        {
+            \includegraphics[width=0.5\columnwidth]{images/magnetic_declination.pdf}
+        }\\
+        \subfloat[Magnetic inclination]
+        {
+            \includegraphics[width=0.5\columnwidth]{images/magnetic_inclination.pdf}
+        }
+    \end{figure}
+
+\end{frame}
+
+
+\begin{frame}
     \frametitle{Compass}
 
     \begin{center}
