Add compass information

--- a/teoricas/teorica_03/slides.tex
+++ b/teoricas/teorica_03/slides.tex
@@ -48,7 +48,7 @@
 \graphicspath{{./images/}}
 
 % add math preamble
-%\input{./math_preamble}
+\input{./src/math_preamble}
 
 \title{Sensores}
 \author{}
