--- a/teoricas/teorica_03/src/math_preamble.tex
+++ b/teoricas/teorica_03/src/math_preamble.tex
@@ -21,6 +21,7 @@
 \newcommand{\toCoord}[2]{\prescript{\mathrm{#2}}{}{#1}}
 \newcommand{\worldCoordSystem}{\mathrm{w}}
 \newcommand{\cameraCoordSystem}{\mathrm{c}}
+\newcommand{\bodyCoordSystem}{\mathrm{B}}
 \newcommand{\point}{\vec{p}}
 \newcommand{\worldPoint}{\toCoord{\point}{\worldCoordSystem}}
 \newcommand{\homoWorldPoint}{\toCoord{\homo{\point}}{\worldCoordSystem}}
